--- a/src/UI/Modal/Modal.css
+++ b/src/UI/Modal/Modal.css
@@ -110,7 +110,7 @@
 
 .modal-body {
   max-height: 85vh; 
-  overflow-y: auto; 
+  /* overflow-y: auto;  */
     padding-left: 1.5rem;
     padding-right: 1.5rem;
 
